# tg-vibe-check

./: LICENSE  README.md  app.py  example.py  llm.py  main.py  prompt.py  pyproject.toml  rapidapi.py  ui.py
.streamlit/: config.toml
docs/: rapidapi.md
tg_vibe_check/: __init__.py
tg_vibe_check/core/: __init__.py  llm.py
tg_vibe_check/integrations/: rapidapi.py
tg_vibe_check/ui/: streamlit_app.py
